[package]
name = "ffmpreg"
version = "0.1.2"
edition = "2024"
description = "An experimental general-purpose multimedia toolkit."
authors = ["Yazalde Filimone <yazaldefilimon@gmail.com>"]
repository = "https://github.com/yazaldefilimone/ffmpreg"
license = "Apache-2.0"
exclude = ["readme.md", "dx-*"]

[profile.release]
codegen-units = 1
lto = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
nom = "8.0.0"
rustc-hash = "2.1.1"

[dev-dependencies]
tempfile = "3.10"
